--- a/index.html
+++ b/index.html
@@ -47,8 +47,16 @@
     <link rel="icon" type="image/ico" href="favicon.ico">
     <link rel="icon" type="image/png" href="favicon.png">
 
+    <!-- Boostrap 3.3.6 ______________________ -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Google Fonts -->
+    <style>
+@import 'https://fonts.googleapis.com/css?family=Neuton|Space+Mono';
+</style>
+
     <!-- CSS, you gotta have style -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.min.css">
 
     <!-- Modernizer, cause some browsers suck -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
@@ -57,20 +65,41 @@
   <body>
 
     <!-- Add your site or application here -->
+    <header>
+        <div class="logo">
+          <div class="box box-logo"><img class="logo-image" src="img/logo1.png"</div>
+        </div>
+        <div class="brand">
+          <h1>GreenOak Construction</h1>
+        </div>
+        <nav>
+          <ul>
+            <h4>
+              <li><a href="#about">about</a></li>
+              <li><a href="#portfolio">portfolio</a></li>
+              <li><a href="#contact">contact</a></li>
+            </h4>
 
-    <div class="container">
-      <div class="box box1">1</div>
-      <div class="box box2">2</div>
-      <div class="box box3">3</div>
-      <div class="box box4">4</div>
-      <div class="box box5">5</div>
-      <div class="box box6">6</div>
-      <div class="box box7">7</div>
-      <div class="box box8">8</div>
-      <div class="box box9">9</div>
-      <div class="box box10">10</div>
-    </div>
+          </ul>
+        </nav>
+    </header>
+    <dix class="wrapper">
+      <div class="container">
+        <div class="box box1">1 list item</div>
+        <div class="box box2">2</div>
+        <div class="box box3">3</div>
+        <div class="box box4">4</div>
+        <div class="box box5">5</div>
+        <div class="box box6">6</div>
+        <div class="box box7">7</div>
+        <div class="box box8">8</div>
+        <div class="box box9">Green Oak Construction</div>
+        <div class="box box10">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+      </div>
+    </dix>
+    <footer>
 
+    </footer>
     <!-- SCRIPTS -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
