--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
             <!-- Slides Container -->
             <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 1300px; height: 600px; overflow: hidden;">
                 <div>
-                    <img u="image" src2="../img/1.jpg" />
+                    <img u="image" src2="img/1.jpg" />
                 </div>
                 <div>
-                    <img u="image" src2="../img/2.jpg" />
+                    <img u="image" src2="img/2.jpg" />
                 </div>
                 <div>
-                    <img u="image" src2="../img/3.jpg" />
+                    <img u="image" src2="img/3.jpg" />
                 </div>
             </div>
 
