Change image source

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </style>
 
     <!-- CSS, you gotta have style -->
-    <link rel="stylesheet" href="css/styles.min.css">
+    <link rel="stylesheet" href="../css/styles.min.css">
 
     <!-- Modernizer, cause some browsers suck -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
@@ -103,13 +103,13 @@
             <!-- Slides Container -->
             <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 1300px; height: 600px; overflow: hidden;">
                 <div>
-                    <img u="image" src2="http://res.cloudinary.com/dnhlinvix/image/upload/v1470361543/1_ujd4yz.jpg" />
+                    <img u="image" src2="../img/1.jpg" />
                 </div>
                 <div>
-                    <img u="image" src2="http://res.cloudinary.com/dnhlinvix/image/upload/v1470361544/2_wqrg0j.jpg" />
+                    <img u="image" src2="../img/2.jpg" />
                 </div>
                 <div>
-                    <img u="image" src2="http://res.cloudinary.com/dnhlinvix/image/upload/v1470361544/3_huf0h3.jpg" />
+                    <img u="image" src2="../img/3.jpg" />
                 </div>
             </div>
 
