--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </style>
 
     <!-- CSS, you gotta have style -->
-    <link rel="stylesheet" href="../css/styles.min.css">
+    <link rel="stylesheet" href="css/styles.min.css">
 
     <!-- Modernizer, cause some browsers suck -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
@@ -103,13 +103,13 @@
             <!-- Slides Container -->
             <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 1300px; height: 600px; overflow: hidden;">
                 <div>
-                    <img u="image" src2="../img/1.jpg" />
+                    <img u="image" src2="img/1.jpg" />
                 </div>
                 <div>
-                    <img u="image" src2="../img/2.jpg" />
+                    <img u="image" src2="img/2.jpg" />
                 </div>
                 <div>
-                    <img u="image" src2="../img/3.jpg" />
+                    <img u="image" src2="img/3.jpg" />
                 </div>
             </div>
 
@@ -210,7 +210,7 @@
 
     <!-- jssor slider scripts-->
     <!-- use jssor.slider.debug.js for debug -->
-    <script type="text/javascript" src="../js/jssor.slider.mini.js"></script>
+    <script type="text/javascript" src="js/jssor.slider.mini.js"></script>
     <script>
         jQuery(document).ready(function ($) {
 
