--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     line-height: 19px;
                     color: white;
                     font-size: 12px;
-                    background: url(../img/b21.png) no-repeat;
+                    background: url(img/b21.png) no-repeat;
                     overflow: hidden;
                     cursor: pointer;
                 }
@@ -171,7 +171,7 @@
                     width: 55px;
                     height: 55px;
                     cursor: pointer;
-                    background: url(../img/a21.png) center center no-repeat;
+                    background: url(img/a21.png) center center no-repeat;
                     overflow: hidden;
                 }
                 .jssora21l { background-position: -3px -33px; }
