--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="box box-logo"><img class="logo-image" src="img/logo2.png"</div>
         </div>
         <div class="brand">
-          <h1>Green Oak Construction</h1>
+          <h1>GreenOak Construction</h1>
         </div>
         <nav>
           <ul>
@@ -90,7 +90,7 @@
         <!-- To move inline styles to css file/block, please specify a class name for each element. -->
         <!-- ================================================== -->
         <div id="slider1_container" style="visibility: hidden; position: relative; margin: 0 auto;
-        top: 0px; left: 0px; width: 1300px; height: 600px; overflow: hidden;">
+        top: 0px; left: 0px; width: 1080px; height: 400px; overflow: hidden;">
             <!-- Loading Screen -->
             <div u="loading" style="position: absolute; top: 0px; left: 0px;">
                 <div style="filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block;
@@ -101,7 +101,7 @@
                 </div>
             </div>
             <!-- Slides Container -->
-            <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 1300px; height: 600px; overflow: hidden;">
+            <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 1080px; height: 400px; overflow: hidden;">
                 <div>
                     <img u="image" src2="img/1.jpg" />
                 </div>
@@ -193,19 +193,52 @@
         <!-- Jssor Slider End -->
     </div>
     <div class="wrapper">
-      <div class="container-fluid">
-        <h2 id="about">Green Oak Construction</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <img class="img" src="http://placehold.it/300.png" />
+          </div>
+          <div class="col-md-8 about-text">
+            <h2 id="about">GreenOak Construction</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
+        <br />
+        <p class="about-text">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </div>
+      <br />
+      <div class="container highlights">
+        <h3>We specialize in the following: </h3><br />
+        <div class="row">
+          <div class="col-md-4">
+            <div data-content="Special 1" class="specialization center-block">
+              <img class="img specialization" src="http://placehold.it/150x150.png" />
+            </div>
+          </div>
+          <div class="col-md-4 center-block">
+            <div data-content="Special 2" class="specialization center-block">
+              <img class="img" src="http://placehold.it/150x150.png" />
+            </div>
+          </div>
+          <div class="col-md-4 center-block">
+            <div data-content="Special 3" class="specialization center-block">
+              <img class="img" src="http://placehold.it/150x150.png" />
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-xs-3 right-footer">
+          <div class="col-md-2 right-footer">
             <img src="img/white_logo_30.png" />
           </div>
-          <div class="col-xs-3 left-footer">
-            <h4>Green Oak Construction</h4>
+          <div class="col-md-4 left-footer">
+            <h4>GreenOak Construction</h4>
             <p><a href="tel:8045555555" class="footer-link">804.555.5555</a></p>
           </div>
         </div>
