--- a/index_bak.html
+++ b/index_bak.html
@@ -55,8 +55,6 @@
 @import 'https://fonts.googleapis.com/css?family=Droid+Sans|Lora';
 </style>
 
-    <link rel="stylesheet" href="css/animate.css" type="text/css">
-
     <!-- CSS, you gotta have style -->
     <link rel="stylesheet" href="css/styles.min.css">
 
@@ -67,39 +65,7 @@
   <body>
 
     <!-- Add your site or application here -->
-    <div id="navmain" class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
-         <div class="navbar-header">
-           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-             <span class="sr-only">Toggle navigation</span>
-             <span class="icon-bar"></span>
-             <span class="icon-bar"></span>
-             <span class="icon-bar"></span>
-           </button>
-
-          <a class="navbar-brand page-scroll" href="#top">GreenOak Construction</a>
-
-         </div>
-         <!-- Collect the nav links, forms, and other content for toggling -->
-         <div class="collapse navbar-collapse">
-           <ul class="nav navbar-nav navbar-right">
-             <li>
-               <a class="page-scroll" href="#about" data-toggle="collapse" data-target=".navbar-collapse.in">About</a>
-             </li>
-             <li>
-               <a class="page-scroll" href="#projects" data-toggle="collapse" data-target=".navbar-collapse.in">Projects</a>
-             </li>
-             <li>
-               <a class="page-scroll" href="#contact" data-toggle="collapse" data-target=".navbar-collapse.in">Contact</a>
-             </li>
-           </ul>
-         </div>
-         <!-- /.navbar-collapse -->
-
-       </div>
-       <!-- end .navbar-header -->
-     </div>
-    <!-- <header>
+    <header>
         <div class="logo">
           <div class="box box-logo"><img class="logo-image" src="img/logo2.png"</div>
         </div>
@@ -115,15 +81,16 @@
               <li>&nbsp; &#47; &nbsp;</li>
               <li><a href="#contact">Contact</a></li>
             </h4>
+
           </ul>
         </nav>
-    </header> -->
-    <div class="main-slider" style="min-height: 50px;">
+    </header>
+    <div style="min-height: 50px;">
         <!-- Jssor Slider Begin -->
         <!-- To move inline styles to css file/block, please specify a class name for each element. -->
         <!-- ================================================== -->
         <div id="slider1_container" style="visibility: hidden; position: relative; margin: 0 auto;
-        top: 50px; left: 0px; width: 1080px; height: 400px; overflow: hidden;">
+        top: 0px; left: 0px; width: 1080px; height: 400px; overflow: hidden;">
             <!-- Loading Screen -->
             <div u="loading" style="position: absolute; top: 0px; left: 0px;">
                 <div style="filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block;
@@ -228,11 +195,10 @@
     <div class="wrapper">
       <div class="container">
         <div class="row">
-          <div class="col-sm-12 col-sm-4">
-            <img class="img img-responsive" src="img/logo.png" />
+          <div class="col-md-4">
+            <img class="img" src="http://placehold.it/300.png" />
           </div>
-          <div class="clearfix visible-xs-block"></div>
-          <div class="col-sm-12 col-sm-8 about-text">
+          <div class="col-md-8 about-text">
             <h2 id="about">GreenOak Construction</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
@@ -243,10 +209,7 @@
         </p>
       </div>
       <br />
-
       <div class="container highlights">
-        <hr />
-        <br />
         <h3>We specialize in the following: </h3><br />
         <div class="row">
           <div class="col-md-4">
@@ -271,10 +234,10 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-xs-3 col-md-5 right-footer">
+          <div class="col-md-2 right-footer">
             <img src="img/white_logo_30.png" />
           </div>
-          <div class="col-xs-9 col-md-4 left-footer">
+          <div class="col-md-4 left-footer">
             <h4>GreenOak Construction</h4>
             <p><a href="tel:8045555555" class="footer-link">804.555.5555</a></p>
           </div>
@@ -284,8 +247,6 @@
     <!-- SCRIPTS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
-    <script src="js/jquery.easing.min.js"></script>
-    <script src="js/jquery.fittext.js"></script>
     <script src="docs.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="ie10-viewport-bug-workaround.js"></script>
