--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         </div>
         <!-- Jssor Slider End -->
     </div>
-    <div class="wrapper">
+    <div class="wrapper" id="about">
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-sm-4">
@@ -233,7 +233,7 @@
           </div>
           <div class="clearfix visible-xs-block"></div>
           <div class="col-sm-12 col-sm-8 about-text">
-            <h2 id="about">GreenOak Construction</h2>
+            <h2>GreenOak Construction</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
         </div>
