Add more demo images

--- a/index.html
+++ b/index.html
@@ -249,19 +249,19 @@
         <br />
         <h3>We specialize in the following: </h3><br />
         <div class="row">
-          <div class="col-md-4">
-            <div data-content="Special 1" class="specialization center-block">
-              <img class="img specialization" src="http://placehold.it/150x150.png" />
+          <div class="col-sm-12 col-md-4 center-block">
+            <div data-content="Remodeling" class="specialization center-block">
+              <img class="img" src="img/4.png" />
             </div>
           </div>
-          <div class="col-md-4 center-block">
-            <div data-content="Special 2" class="specialization center-block">
-              <img class="img" src="http://placehold.it/150x150.png" />
+          <div class="col-sm-12 col-md-4 center-block">
+            <div data-content="Using Handtools Like A Boss" class="specialization center-block">
+              <img class="img" src="img/5.png" />
             </div>
           </div>
-          <div class="col-md-4 center-block">
-            <div data-content="Special 3" class="specialization center-block">
-              <img class="img" src="http://placehold.it/150x150.png" />
+          <div class="col-sm-12 col-md-4 center-block">
+            <div data-content="Uncompensated Product Placement" class="specialization center-block">
+              <img class="img" src="img/6.png" />
             </div>
           </div>
         </div>
@@ -272,7 +272,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-3 col-md-5 right-footer">
-            <img src="img/white_logo_30.png" />
+            <img src="img/white_logo_30.svg" />
           </div>
           <div class="col-xs-9 col-md-4 left-footer">
             <h4>GreenOak Construction</h4>
