--- a/index.html
+++ b/index.html
@@ -228,11 +228,11 @@
     <div class="wrapper" id="about">
       <div class="container">
         <div class="row">
-          <div class="col-sm-12 col-sm-4">
+          <div class="col-xs-12 col-sm-4">
             <img class="img img-responsive" src="img/logo.png" />
           </div>
           <div class="clearfix visible-xs-block"></div>
-          <div class="col-sm-12 col-sm-8 about-text">
+          <div class="col-xs-12 col-sm-8 about-text">
             <h2>GreenOak Construction</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
@@ -245,27 +245,62 @@
       <br />
 
       <div class="container highlights">
-        <hr />
-        <br />
         <h3>We specialize in the following: </h3><br />
         <div class="row">
-          <div class="col-sm-12 col-md-4 center-block">
+          <div class="col-xs-12 col-sm-4">
             <div data-content="Remodeling" class="specialization center-block">
               <img class="img" src="img/4.png" />
             </div>
           </div>
-          <div class="col-sm-12 col-md-4 center-block">
+          <div class="col-xs-12 col-sm-4">
             <div data-content="Using Handtools Like A Boss" class="specialization center-block">
               <img class="img" src="img/5.png" />
             </div>
           </div>
-          <div class="col-sm-12 col-md-4 center-block">
+          <div class="col-xs-12 col-sm-4">
             <div data-content="Uncompensated Product Placement" class="specialization center-block">
               <img class="img" src="img/6.png" />
             </div>
           </div>
         </div>
+        <br />
+        <hr />
+        <br />
       </div>
+
+      <div class="container" id="projects">
+        <div class="row">
+          <div class="col-xs-12 col-md-4">
+            <div class="thumbnail">
+              <img src="img/amityville.png" alt="...">
+              <div class="caption">
+                  <h3 class="thumbnail-caption">112 Ocean Avenue</h3>
+                  <p class="thumbnail-text">The happy couple poses before we did a complete renovation of the basement. Old construction had given way to pests that seemed to take over the whole house in the early hours of the morning. Sadly, they abandoned the house before we completed the job, but the new owners love it!</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-4">
+            <div class="thumbnail">
+              <img src="img/elm.png" alt="...">
+              <div class="caption">
+                  <h3 class="thumbnail-caption">1428 Elm Street</h3>
+                  <p class="thumbnail-text">The new owners of this classic brought us in for general renovations that included removing bars from the windows (such a nice neighborhood too) and new sheetrock in one of the bedrooms. Strangely enough, the old sheetrock almost looked like it had stretched outwards, but it's good as new now.And, as luck would have, we were commissioned for another job right down the road to upgrade a basement furnace to a more modern central air system.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-4">
+            <div class="thumbnail">
+              <img src="img/Psycho.png" alt="...">
+              <div class="caption">
+                  <h3 class="thumbnail-caption">Fairvale, California</h3>
+                  <p class="thumbnail-text">This grand old house looks rough on the outside, but don't let that fool you. The owner, a quiet and super nice gentleman, was looking to remodel the master suite on the top floor. He asked for a room becoming of a matriarch and we delivered. His mother was out of town during the renovation, but we hear she loved it!</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
     </div>
 
     <footer>
