--- a/index.html
+++ b/index.html
@@ -264,11 +264,13 @@
           </div>
         </div>
         <br />
-        <hr />
-        <br />
+        <hr id="projects" />
+      </div>
+      <div class="container text-center">
+        <h3>Projects</h3><br />
       </div>
 
-      <div class="container" id="projects">
+      <div class="container">
         <div class="row">
           <div class="col-xs-12 col-md-4">
             <div class="thumbnail">
