Work on projects

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
               <img src="img/elm.png" alt="...">
               <div class="caption">
                   <h3 class="thumbnail-caption">1428 Elm Street</h3>
-                  <p class="thumbnail-text">The new owners of this classic brought us in for general renovations that included removing bars from the windows (such a nice neighborhood too) and new sheetrock in one of the bedrooms. Strangely enough, the old sheetrock almost looked like it had stretched outwards, but it's good as new now.And, as luck would have, we were commissioned for another job right down the road to upgrade a basement furnace to a more modern central air system.</p>
+                  <p class="thumbnail-text">The new owners of this classic brought us in for general renovations that included removing bars from the windows (such a nice neighborhood too) and new sheetrock in one of the bedrooms. Strangely enough, the old sheetrock almost looked like it had stretched outwards, but it's good as new now. And, as luck would have it, we were commissioned for another job right down the road to upgrade a basement furnace to a more modern central air system.</p>
               </div>
             </div>
           </div>
@@ -295,7 +295,7 @@
               <img src="img/Psycho.png" alt="...">
               <div class="caption">
                   <h3 class="thumbnail-caption">Fairvale, California</h3>
-                  <p class="thumbnail-text">This grand old house looks rough on the outside, but don't let that fool you. The owner, a quiet and super nice gentleman, was looking to remodel the master suite on the top floor. He asked for a room becoming of a matriarch and we delivered. His mother was out of town during the renovation, but we hear she loved it!</p>
+                  <p class="thumbnail-text">This wonderful old house looks rough on the outside, but don't let that fool you. The owner, a quiet and super nice gentleman, was looking to remodel the master suite on the top floor. He asked for a room becoming of a grand matriarch and we delivered. His mother was out of town during the renovation, but we hear she loved it!</p>
               </div>
             </div>
           </div>
