--- a/index.html
+++ b/index.html
@@ -300,11 +300,58 @@
             </div>
           </div>
         </div>
+        <br />
+        <hr id="contact" />
       </div>
 
+      <div class="container">
+          <h1 class="text-center"><a href="#myModal" role="button" class="btn btn-success btn-lg" data-toggle="modal">Contact Us</a></h1>
+      </div>
 
+      <div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+              <h3 id="myModalLabel">We'd Love to Hear From You</h3>
+            </div>
+            <div class="modal-body">
+
+                <form class="form-horizontal">
+                  <div class="form-group">
+                    <div class="col-xs-12">
+                      <label>Name</label><input class="form-control required" placeholder="Your name" data-placement="top" data-trigger="manual" data-content="Must be at least 3 characters long, and must only contain letters." type="text">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <div class="col-xs-12">
+                      <label>Message</label><textarea class="form-control" placeholder="Your message here.." data-placement="top" data-trigger="manual"></textarea>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <div class="col-xs-12">
+                      <label>E-Mail</label><input class="form-control email" placeholder="email@you.com (so that we can contact you)" data-placement="top" data-trigger="manual" data-content="Must be a valid e-mail address (user@gmail.com)" type="text">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <div class="col-xs-12">
+                      <label>Phone</label><input class="form-control phone" placeholder="999-999-9999" data-placement="top" data-trigger="manual" data-content="Must be a valid phone number (999-999-9999)" type="text">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <div class="col-xs-12">
+                      <button type="submit" class="btn btn-success pull-right">Send It!</button> <p class="help-block pull-left text-danger hide" id="form-error">&nbsp; The form is not valid. </p>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-danger" data-dismiss="modal" aria-hidden="true">Cancel</button>
+            </div>
+          </div>
+      </div>
     </div>
-
+    </div>
     <footer>
       <div class="container">
         <div class="row">
@@ -318,15 +365,16 @@
         </div>
       </div>
     </footer>
+
     <!-- SCRIPTS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/jquery.fittext.js"></script>
     <script src="docs.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="ie10-viewport-bug-workaround.js"></script>
-
+    <script type="text/javascript" src="js/form.js"></script>
     <!-- jssor slider scripts-->
     <!-- use jssor.slider.debug.js for debug -->
     <script type="text/javascript" src="js/jssor.slider.mini.js"></script>
@@ -402,6 +450,7 @@
       ga('create', 'UA-81868823-1', 'auto');
       ga('send', 'pageview');
     </script>
+
 
   </body>
 </html>
