--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <link rel="icon" type="image/ico" href="favicon.ico">
     <link rel="icon" type="image/png" href="favicon.png">
 
-    <!-- Boostrap 3.3.6 ______________________ -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <!-- Google Fonts -->
     <style>
@@ -317,38 +317,49 @@
             </div>
             <div class="modal-body">
 
-                <form class="form-horizontal">
+                <form class="form-horizontal" action="https://formspree.io/nmarlowe@gmail.com"
+      method="POST">
                   <div class="form-group">
                     <div class="col-xs-12">
-                      <label>Name</label><input class="form-control required" placeholder="Your name" data-placement="top" data-trigger="manual" data-content="Must be at least 3 characters long, and must only contain letters." type="text">
+                      <label>Name</label><input class="form-control required" placeholder="Your name" data-placement="top" data-trigger="manual" data-content="Must be at least 3 characters long, and must only contain letters." type="text" name="name">
                     </div>
                   </div>
                   <div class="form-group">
                     <div class="col-xs-12">
-                      <label>Message</label><textarea class="form-control" placeholder="Your message here.." data-placement="top" data-trigger="manual"></textarea>
+                      <label>E-Mail</label><input class="form-control email" placeholder="email@you.com (so that we can contact you)" data-placement="top" data-trigger="manual" data-content="Must be a valid e-mail address (user@gmail.com)" type="text" name="_replyto">
                     </div>
                   </div>
-                  <div class="form-group">
-                    <div class="col-xs-12">
-                      <label>E-Mail</label><input class="form-control email" placeholder="email@you.com (so that we can contact you)" data-placement="top" data-trigger="manual" data-content="Must be a valid e-mail address (user@gmail.com)" type="text">
-                    </div>
-                  </div>
-                  <div class="form-group">
+                  <!-- <div class="form-group">
                     <div class="col-xs-12">
                       <label>Phone</label><input class="form-control phone" placeholder="999-999-9999" data-placement="top" data-trigger="manual" data-content="Must be a valid phone number (999-999-9999)" type="text">
                     </div>
-                  </div>
+                  </div> -->
                   <div class="form-group">
                     <div class="col-xs-12">
+                      <label>Message</label><textarea class="form-control" placeholder="Your message here.." data-placement="top" data-trigger="manual" name="message"></textarea>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <div class="col-xs-offset-5 col-xs-1">
                       <button type="submit" class="btn btn-success pull-right">Send It!</button> <p class="help-block pull-left text-danger hide" id="form-error">&nbsp; The form is not valid. </p>
                     </div>
+                    <div class="col-xs-1">
+                      <button type="button" class="btn btn-danger" data-dismiss="modal" aria-hidden="true">Cancel</button>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <input type="hidden" name="_subject" value="New submission from website" />
+                    <input type="hidden" name="_format" value="plain" />
+                    <input type="text" name="_gotcha" style="display:none" />
+                    <input type="hidden" name="_next" value="thanks.html" />
                   </div>
                 </form>
               </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-danger" data-dismiss="modal" aria-hidden="true">Cancel</button>
+
             </div>
           </div>
+
       </div>
     </div>
     </div>
@@ -368,7 +379,8 @@
 
     <!-- SCRIPTS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/jquery.fittext.js"></script>
     <script src="docs.min.js"></script>
