--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                     <input type="hidden" name="_subject" value="New submission from website" />
                     <input type="hidden" name="_format" value="plain" />
                     <input type="text" name="_gotcha" style="display:none" />
-                    <input type="hidden" name="_next" value="thanks.html" />
+                    <input type="hidden" name="_next" value="/thanks.html" />
                   </div>
                 </form>
               </div>
