--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-              <h3 id="myModalLabel">We'd Love to Hear From You</h3>
+              <h3 id="myModalLabel" class="text-center">Let's talk about your next project</h3>
             </div>
             <div class="modal-body">
 
