Fix contact form

--- a/index.html
+++ b/index.html
@@ -99,25 +99,7 @@
        </div>
        <!-- end .navbar-header -->
      </div>
-    <!-- <header>
-        <div class="logo">
-          <div class="box box-logo"><img class="logo-image" src="img/logo2.png"</div>
-        </div>
-        <div class="brand">
-          <h1>GreenOak Construction</h1>
-        </div>
-        <nav>
-          <ul>
-            <h4>
-              <li><a href="#about">About</a></li>
-              <li>&nbsp; &#47; &nbsp;</li>
-              <li><a href="#portfolio">Projects</a></li>
-              <li>&nbsp; &#47; &nbsp;</li>
-              <li><a href="#contact">Contact</a></li>
-            </h4>
-          </ul>
-        </nav>
-    </header> -->
+
     <div class="main-slider" style="min-height: 50px;">
         <!-- Jssor Slider Begin -->
         <!-- To move inline styles to css file/block, please specify a class name for each element. -->
@@ -341,7 +323,7 @@
                   </div>
                   <div class="form-group">
                     <div class="col-xs-offset-5 col-xs-1">
-                      <button type="submit" class="btn btn-success pull-right">Send It!</button> <p class="help-block pull-left text-danger hide" id="form-error">&nbsp; The form is not valid. </p>
+                      <button type="submit" class="btn btn-success pull-right">Send It!</button>
                     </div>
                     <div class="col-xs-1">
                       <button type="button" class="btn btn-danger" data-dismiss="modal" aria-hidden="true">Cancel</button>
@@ -356,7 +338,7 @@
                 </form>
               </div>
             <div class="modal-footer">
-
+              <p class="help-block alert alert-danger text-center hide" id="form-error">&nbsp; The form is not valid. </p>
             </div>
           </div>
 
